# sphinx_doc

./: README.md  poetry.toml  pyproject.toml
ci/: sphinx-docs.jenkinsfile
source/: conf.py  index.rst
source/docs/: p3dm.rst
source/docs/p3dm/: API.rst  GenICam.rst  PXC_DW.rst  PXC_DW_device_settings_pane.rst  PXC_DW_diagnostic_scans.rst  PXC_DW_main_controls.rst  PXC_DW_saving_scans.rst  PXC_DW_scanning_profiles.rst  PXC_DW_visualisation_pane.rst  PXC_ND.rst  PXC_ND_configuringDNsettings.rst  PXC_file_camera.rst  PXC_multiinstance.rst  getting_started.rst  getting_started_installation.rst  introduction.rst
